Partial_14Dec2021/force-app/main/default/objects/Redemption_Order__c/Redemption_Order__c.object-meta.xml
<CustomObject>
    <label>Redemption Order</label>
    <nameField>
        <displayFormat>RO-{0000}</displayFormat>
        <label>Redemption Order Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>