Partial_14Dec2021/force-app/main/default/objects/Redemption_Order__c/fields/Influencer__c.field-meta.xml
<CustomField>
    <fullName>Influencer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influencer</label>
    <referenceTo>iep_influencer__c</referenceTo>
    <relationshipLabel>Redemption Orders</relationshipLabel>
    <relationshipName>Redemption_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>