Partial_14Dec2021/force-app/main/default/objects/Redemption_Order__c/fields/service_order_id__c.field-meta.xml
<CustomField>
    <fullName>service_order_id__c</fullName>
    <label>Order Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>